Fixed the spacing between image and text on the cont1

--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,10 @@ ul {
 .cont1-nest1 {
     display: flex;
     justify-content: space-between;
+    flex: 1
 }
 
+
 #g1 {
-    width: 300px;
+    max-width: 300px;
 }
